--- a/styles/components/novos_estilos.css
+++ b/styles/components/novos_estilos.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap");
 body {
   background-image: url(/assets/fundo.png);
   font-family: "Rubik Broken Fax", sans-serif;
@@ -6,13 +7,20 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  background-image: url(../images/bg.jpg);
-  background-size: cover;
-  min-height: 100vh;
   align-items: center;
-  justify-content: center;
-  padding: 20px 20px 50px;
+  max-width: 800px;
+  margin: 0 auto;
+  color: white;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  padding: 20px;
+  font-family: "Rubik Broken Fax", sans-serif;
+  font-size: 24px;
 }
 
 .grid {
@@ -46,6 +54,10 @@ main {
   background-image: url(/assets/anfitriao.jpg);
   backface-visibility: hidden;
 }
-.grid .card:hover {
+.grid .ativo {
   transform: rotateY(180deg);
+}
+.grid .disabled-card {
+  filter: saturate(0);
+  opacity: 0.5;
 }/*# sourceMappingURL=novos_estilos.css.map */
