--- a/styles/components/novos_estilos.scss
+++ b/styles/components/novos_estilos.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap');
 
 body {
     background-image: url(/assets/fundo.png);
@@ -7,13 +8,20 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    background-image: url(../images/bg.jpg);
-    background-size: cover;
-    min-height: 100vh;
     align-items: center;
-    justify-content: center;
-    padding: 20px 20px 50px;
+    max-width: 800px;
+    margin: 0 auto;
+    color: white;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    padding: 20px;
+    font-family: 'Rubik Broken Fax', sans-serif;
+    font-size: 24px;
 }
 
 .grid {
@@ -45,9 +53,13 @@ main {
             background-image: url(/assets/anfitriao.jpg);
             backface-visibility: hidden;
         }
-        &:hover {
-            transform: rotateY(180deg);
-        }
     }
-    
+    .ativo {
+        transform: rotateY(180deg);
+    }
+
+    .disabled-card {
+        filter: saturate(0);
+        opacity: 0.5;
+    }
 }
