--- a/styles/components/novos_estilos.css
+++ b/styles/components/novos_estilos.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap");
 body {
-  background-image: url(/assets/fundo.png);
+  background-image: url(../assets/fundo.png);
   font-family: "Rubik Broken Fax", sans-serif;
 }
 
