--- a/styles/components/_inicio.scss
+++ b/styles/components/_inicio.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap');
 
 body {
-    background-image: url(../assets/fundo.png);
+    background-image: url(../fundo.png);
     font-family: 'Rubik Broken Fax', sans-serif;
     min-height: 100vh;
     .inicio {
